# uci-chess-engine

./: CMakeLists.txt
src/: Makefile  bbinit.cpp  board.cpp  board.h  common.h  eval.cpp  eval.h  evalhash.cpp  evalhash.h  hash.h  moveorder.cpp  search.cpp  search.h  searchparams.h  timeman.h  uci.cpp
src/syzygy/: tbcore.c  tbcore.h  tbprobe.cpp
